package me.lwb.adapter

/**
 * Created by ve3344@qq.com.
 */
interface IVisibleAdapter {
    var isVisible: Boolean
}